# owlapy

./: .gitattributes  .gitignore  .lfsconfig  OWL-APy.ipynb  environment.yml  setup.cfg  tox.ini
.github/workflows/: docs.yml  test.yml
KGs/Mutagenesis/: mutagenesis.owl
docs/: api.rst  conf.py  index.rst
docs/usage/: 01_ontologies.md  installation.md
owlapy/: __init__.py  base.py  fast_instance_checker.py  io.py  model.py  render.py  utils.py  vocabulary.py
owlapy/model/: __init__.py
owlapy/owlready2/: __init__.py  base.py  temp_classes.py  utils.py
tests/: test_owlapy.py  test_owlapy_fastinstancechecker.py  test_owlapy_owlready2.py  test_owlapy_render.py
