[metadata]
name = owlapy
version = attr: owlapy.__version__
description = OWL-APy is a OWL Model for Python loosely based on OWLAPI
author = Simon Bin, Lukas Bluebaum
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
python_requires = >=3.8
include_package_data = True
# packages = owlapy, superprop, sortedcontainers-stubs
packages = find:
install_requires =
    typing_extensions; python_version < "3.7"
    sortedcontainers>=2.3.0
    pandas>=1.2.3
    rdflib>=6.0.2
    parsimonious>=0.8.1

[options.extras_require]
owlready2 =
    owlready2>=0.34
test =
    pytest>=6.2.2
    tox>=3.23.0
docs =
    sphinx>=3.5.3
    sphinxext-autox>=0.0.2
    sphinx-theme>=1.0
    sphinx-rtd-theme>=0.5.1
    myst-parser>=0.13.5
dev =
    build>=0.3.0
    %(owlready2)s
    %(test)s
    %(docs)s

[options.packages.find]
exclude =
    tests
    examples

[options.package_data]
* = *.pyi, py.typed
